# castle

./: .env.example  .firebaserc  .gitignore  .replit  CHILDRENCASTLES_DOMAIN_SETUP.md  CLOUD_RUN_VISUAL_GUIDE.md  COMPREHENSIVE_SETUP_GUIDE.md  CUSTOM_DOMAIN_CLOUD_RUN.md  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  FIREBASE_CLOUD_RUN_INTEGRATION.md  FIREBASE_COMMANDS.md  FIREBASE_DEPLOYMENT.md  FIREBASE_GITHUB_INTEGRATION.md  FULL_DEPLOYMENT_GUIDE.md  GITHUB_FIREBASE_DEPLOYMENT.md  GITHUB_FIREBASE_SETUP.md  GITHUB_PUSH_INSTRUCTIONS.md  LOCAL_FIREBASE_DEPLOYMENT.md  README.md  REPLIT_VS_FIREBASE.md  add_firebase_storage_fields.py  app.py  app.py.backup  app.py.bak  audio_generation_results.json  black_sheep.txt  blackwood_manor.txt  bo_peep.txt  brown_bear.txt  chatgpt_helper.py  chatgpt_routes.py  cloudbuild.yaml  code_breakers.txt  color_monster.txt  convert_to_mp3.py  db_commands.py  deploy.sh  deploy_firebase.sh  (+61 more)
.firebase/: hosting.cHVibGlj.cache
attached_assets/: Pasted-Show-more-data-track-reading-time-quiz-scores-emotional-feedback-like-emoji-reactions-Add-dai-1743958376886.txt  Пин от пользователя bosslady54 на доске Telefon háttérképek в 2025 г _ Фотографии задних планов, Таинственные места, Живописные пейзажи.html
public/: 404.html  child-login.html  game-mode.html  index.html  parent-login.html  story-mode.html
scripts/: capture_live_html.py  prepare_firebase_config.js
templates/: add_child.html  add_child.html.bak2  admin_dashboard.html  admin_edit_user.html  admin_login.html  ai_assistant.html  base.html  child_dashboard.html  (+26 more)
(+104 files in other folders)
